emulation: Fix restricted scrolling with a short ring

Fixes setting restrict scrolling with the upper bound being row 1 not working.
To test, run "echo -e '\e[1;15r'"  immediately before the terminal starts
scrolling; before this patch this had no effect.

https://bugzilla.gnome.org/show_bug.cgi?id=710483